kubernetes/apps/prod/gotify/smtp-gotify/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: smtp-gotify
  namespace: gotify
spec:
  entryPoints:
    - websecure
  tls:
    secretName: smtp-gotify.${DOMAIN}
    passthrough: true
  routes:
    - match: HostSNI(`${HOST_SMTP_GOTIFY}.${DOMAIN}`)
      services:
        - name: ${GOTIFY_SMTP_SERVICE}
          port: 2525
          terminationDelay: 0
